# crystallus

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/: ci_environment.yml
.github/workflows/: test.yml
crystallus/: __init__.py  _util.py  crystal_generator.py  py.typed  spacegroup.db  utils.py  wyckoff_cfg_generator.py  wyckoff_db.py
env/: environment.yml  test_environment.yml
examples/: Ag32Ge4S24_like.pd.xz  basic_usage.ipynb  crystal_generator.ipynb  crystal_generator_test.ipynb  crystal_tools_test_fixed.ipynb  pbc_all_distance.ipynb  results.pd.xz  spacegroup.db  test_complicate_case.ipynb  unnor_coords.csv
examples/.ipynb_checkpoints/: crystal_generator_test-checkpoint.ipynb
examples/cifs/: 178_224.cif  mp-15645.cif  mp-557833.cif  mp-761219.cif  mp-7614.cif  mp-766575.cif  mp-9770.cif
libcrystal/: Cargo.toml
libcrystal/benches/: bench_wyckoff_gen_many.rs  bench_wyckoff_gen_one.rs
libcrystal/examples/: gen_positions.rs
libcrystal/src/: covalent_radius.json  crystal_gen.rs  generator.rs  lib.rs  structure.rs  utils.rs  wrap.rs  wyckoff_cfg.rs  wyckoff_pos.rs
libcrystal/src/crystal_gen/: crystal.rs  options.rs  utils.rs
libcrystal/src/generator/: base.rs  empirical.rs  options.rs  random_gen.rs  structure.rs  template_gen.rs
libcrystal/src/utils/: lattice.rs  pbc.rs  wrap_pbc.rs
libcrystal/src/wrap/: pbc.rs
src/: crystal_gen.rs  lib.rs  particle_gen.rs  utils.rs  wyckoff_cfg_gen.rs
tests/: test_crystal_generator.py  test_generator_performance.py  test_wyckoff_generator.py
