[package]
authors = ['tsumina <liu.chang.1865@gmail.com>']
edition = '2021'
homepage = 'https://github.com/yoshida-lab/crystallus'
license = 'Apache-2'
name = 'crystallus'
publish = false
version = '0.3.1-rc1'

[package.metadata.maturin]
name = "crystallus.core"

[workspace]
members = ['libcrystal']

[lib]
crate-type = ['cdylib']
name = 'crystallus'

[dependencies]
itertools = '0.10.3'
rayon = '1.5.2'
either = "1.6.1"

[dependencies.pyo3]
version = "0.16.4"
features = ["extension-module"]

[dependencies.libcrystal]
path = 'libcrystal'

[features]
default = ['openblas']

mkl = ["libcrystal/mkl"]
openblas = ["libcrystal/openblas"]
netlib = ["libcrystal/netlib"]
