[package]
<<<<<<<=======
>>>>>>>8c91cdf... update depens
HEAD 
authors = ['tsumina <liu.chang.1865@gmail.com>']
edition = '2018'
license = 'Apache-2'
license = 'BSD-3'
name = 'libcrystal'
repository = 'https://github.com/yoshida-lab/crystallus'
version = '0.3.0'
workspace = '..'

[[bench]]
name = 'wyckoff_gen_one'
path = 'benches/bench_wyckoff_gen_one.rs'

[[bench]]
name = 'wyckoff_gen_many'
path = 'benches/bench_wyckoff_gen_many.rs'

[lib]
name = 'libcrystal'

[dependencies]
lazy_static = '1.4.0'
num-traits = '0.2.12'
rand = '0.8.3'
rand_distr = '0.4.0'
rayon = '1.3.1'
regex = '1.3.9'
serde_json = '1.0.56'

[dependencies.blas-src]
<<<<<<<=======
>>>>>>>8c91cdf... update depensHEAD 
branch = 'master'
default-features = false
default-features = false
git = "https://github.com/yoshida-lab/blas-src"
version = '0.8'


[dependencies.ndarray]
features = ['rayon', 'blas']
version = '0.15.2'

[dependencies.ndarray-linalg]
branch = "master"
default-features = false
git = "https://github.com/rust-ndarray/ndarray-linalg"

[dev-dependencies]
approx = '0.4.0'

[dev-dependencies.ndarray]
features = ['approx']
version = '0.15.2'

# dev dependencies
[dev-dependencies.blas-src]
branch = 'master'
default-features = false
features = ['openblas']
git = "https://github.com/yoshida-lab/blas-src"

[dev-dependencies.ndarray-linalg]
branch = "master"
default-features = false
features = ['openblas-system']
git = "https://github.com/rust-ndarray/ndarray-linalg"

# features
[features]
# f32 or f64
f32 = []

# enable blas usage in ndarray
# intel-mkl = ['ndarray-linalg/intel-mkl-system', 'blas-src/intel-mkl']
netlib = ['ndarray-linalg/netlib-system', 'blas-src/netlib']
openblas = ['ndarray-linalg/openblas-system', 'blas-src/openblas']

# intel-mkl-static = ['ndarray-linalg/intel-mkl-static', 'blas-src/intel-mkl']
netlib-static = ['ndarray-linalg/netlib-static', 'blas-src/netlib']
openblas-static = ['ndarray-linalg/openblas-static', 'blas-src/openblas']
